# DexoFile

./: .clang-format  .gitignore  CMakeLists.txt  application.cpp  application.h  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thememanager.cpp  thememanager.h
base/: basedialog.cpp  basedialog.h  basedialog.ui  basescreen.cpp  basescreen.h  baseview.cpp  baseview.h  basewindow.cpp  basewindow.h
component/: SpectrumAccumulator.cpp  SpectrumAccumulator.h  SpectrumAccumulatorBuilder.cpp  SpectrumAccumulatorBuilder.h  component.cpp  component.h  componentmanager.cpp  componentmanager.h  databasemanager.cpp  databasemanager.h  detectorcomponent.cpp  detectorcomponent.h  inputcomponent.cpp  inputcomponent.h  navigationcomponent.cpp  navigationcomponent.h  ncmanager.cpp  ncmanager.h  settingmanager.cpp  settingmanager.h
controller/: platform_controller.cpp  platform_controller.h  wifi_service.cpp  wifi_service.h
model/: AccumulationDataTypes.h  AccumulationResult.h  Background.h  Calibration.cpp  Calibration.h  DetectorCalibConfig.h  DetectorCode.cpp  DetectorCode.h  DetectorInfo.h  DetectorModels.h  DetectorProp.cpp  DetectorProp.h  Event.cpp  Event.h  Material.h  Matrix.cpp  Matrix.h  Spectrum.h  Time.h  Types.h  basesettingitem.cpp  basesettingitem.h  ndt_model.cpp  ndt_model.h  settingmodel.cpp  settingmodel.h
page/: AcqTimeDialog.h  AcqTimePresenter.cpp  BgrScreen.cpp  BgrScreen.h  BgrScreen.ui  CalibAcqDialog.cpp  CalibAcqDialog.h  CalibrationScreen.cpp  CalibrationScreen.h  CalibrationScreen.ui  CountRateScreen.cpp  CountRateScreen.h  CountRateScreen.ui  SpectrumViewerScreen.cpp  SpectrumViewerScreen.h  SpectrumViewerScreen.ui  homepage.cpp  homepage.h  homepage.ui  settingscreen.cpp  settingscreen.h
page/bgr/: BgrScreen.cpp  BgrScreen.h  BgrScreen.ui
page/calibration/: CalibAcqDialog.cpp  CalibrationScreen.cpp  CalibrationScreen.ui
page/event_detail/: EventDetailArgs.h  EventDetailScreen.cpp  EventDetailScreen.h  EventDetailScreen.ui
page/events/: EventListAdapter.cpp  EventListAdapter.h  EventListScreen.cpp  EventListScreen.h  EventListScreen.ui
page/home/: homepage.cpp  homepage.h
page/setting/: settingscreen.cpp  settingscreen.h
page/spectrum_viewer/: SpectrumViewerScreen.cpp  SpectrumViewerScreen.ui
page/swinfo/: SwVersion.ui  SwVersionDialog.cpp  SwVersionDialog.h
res/: NDT.db  resource.qrc
util/: NcLibrary.cpp  NcLibrary.h  PeakSearch.cpp  PeakSearch.h  dualsocketnotifier.cpp  dualsocketnotifier.h  nc_exception.cpp  nc_exception.h  ndt_util.cpp  ndt_util.h  util.cpp  util.h
widget/: AcqTimeDialog.cpp  AcqTimeDialog.h  AcqTimeDialog.ui  ChoicesDialog.cpp  ChoicesDialog.h  ChoicesDialog.ui  NcButton.cpp  NcButton.h  ShutdownDialog.cpp  ShutdownDialog.h  SpectrumView.cpp  SpectrumView.h  baselist.cpp  baselist.h  basemodel.h  basescreen.cpp  basescreen.h  bottommenuwidget.ui  concentriccircleswidget.cpp  concentriccircleswidget.h  menuwidget.cpp  menuwidget.h  menuwidget.ui  settingitemdelegate.cpp  settingitemdelegate.h  statusbarwidget.cpp  statusbarwidget.h  statusbarwidget.ui
